# tritonserver-buildkit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/build-python-package/: action.yaml
.github/actions/semantic-release/: action.yaml
.github/workflows/: ci.yaml  semantic_release.yaml
examples/config/: .gitignore  README.md  create-model.py  docker-compose.yaml  example-repo.yaml  requirements.txt
examples/sdk/: .gitignore  README.md  create-model.py  requirements.txt  server.py
src/tsbk/: __init__.py  cli.py  model.py  model_repo.py  model_version.py  spec.py  test_case.py  testing.py  triton_grpc_model_client.py  triton_http_model_client.py  types.py
src/tsbk/utils/: __init__.py  conda.py  dbx.py  pbtxt.py  s3.py  stubs.py  triton.py
tests/assets/: example-repo.yaml
tests/assets/ensemble/: add1.pbtxt  add1.py  ensemble.pbtxt  sub1.pbtxt  sub1.py
tests/assets/mlflow/: with_batch.pbtxt  without_batch.pbtxt
tests/assets/pbtxts/: bls.pbtxt  repeat.pbtxt  simple.pbtxt
tests/assets/python_model/: config.pbtxt  model.py
tests/assets/repeat/: model.py
tests/assets/repeat_sum/: config.pbtxt  model.py
tests/integration/: conftest.py  test_cli.py  test_models.py  test_spec.py
tests/unit/: conftest.py  test_pbtxt.py  test_test_case.py  test_types.py
tests/unit/utils/: test_conda.py  test_dbx.py  test_triton.py
